fork initial commit

--- a/client/css/game.css
+++ b/client/css/game.css
@@ -13,20 +13,22 @@ a,
 a:hover { 
 	color: #169;
 }
+
 p {
 	margin: 0;
-	padding: 0;
+	padding: 0 0 21px 0; 
 }
+
 #container {
 	text-align: left;
-	width: 900px;
+	width: 580px;
 	background: #fff;
 	position: relative;
 	margin: 0 auto;
 	padding: 40px;
 	border: 1px solid #ddd;
 	border-radius: 10px;
-		-moz-border-radius: 10px;
+	moz-border-radius: 10px;
 }
 
 h1 {
@@ -40,18 +42,16 @@ h1 {
 h2 {
 	font-size: 16px;
 	font-weight: bold;
-	margin: 0;
+	margin: 8px 0 0 0;
 }
+
 #log {
+	float: left;
 	margin: 6px 0 0 0;
 	padding: 5px;
 	border: 1px solid #ccc;
 	height: 200px;
 	overflow: auto;
-}
-
-#send {
-	margin: 0 0 10px 0;
 }
 
 #status {
@@ -78,40 +78,3 @@ h2 {
 	color: #000;
 }
 
-#action,
-#data {
-	display: block;
-	width: 400px;
-	margin: 0 0 5px 0;
-}
-
-.bold {
-	font-weight: bold;
-}
-#clientList {
-	float: left;
-	width: 300px;
-}
-#clientListSelect {
-	width: 200px;
-	height: 120px;
-}
-
-#serverInfo {
-	float: left;
-}
-
-#serverPanel {
-	float: right;
-}
-
-#console {
-	margin-top: 20px;
-}
-#console .warning {
-	color: #f00;
-}
-
-.clearer {
-	clear: both;
-}
